# amp-python

./: .dockerignore  .gitignore  AMP_DBT_DESIGN.md  CLAUDE.md  Dockerfile  Dockerfile.kafka  Dockerfile.snowflake  LICENSE  Makefile  README.md  USER_WALKTHROUGH.md  performance_benchmarks.json  pyproject.toml
.amp-dbt/: state.db
.github/workflows/: benchmark.yml  docker-publish.yml  e2e-tests.yml  integration-tests.yml  ruff.yml  unit-tests.yml
apps/: SNOWFLAKE_LOADER_GUIDE.md  execute_query.py  kafka_consumer.py  kafka_streaming_loader.py  kafka_streaming_loader_guide.md  query_cli.py  snowflake_loader_guide.md  snowflake_parallel_loader.py  test_erc20_labeled_parallel.py  test_erc20_parallel_load.py  test_kafka_query.py
apps/queries/: README.md  anvil_logs.sql  erc20_transfers.sql  erc20_transfers_activity.sql  erc20_transfers_streaming.sql
docs/: admin_client_guide.md  implementing_data_loaders.md  inspecting_datasets.md  label_manager.md  metrics.md  parallel_streaming.md  parallel_streaming_usage.md  registry-guide.md  reorg_handling.md  resilience.md  snowflake_loader.md
docs/api/: admin_api.md  client_api.md
k8s/: deploy-to-gke.sh  deployment.yaml
models/: example_model.sql
models/staging/: stg_test.sql
notebooks/: block_explorer_queries.py  kafka_streaming.py  marimo_example_nb.py  test_loaders.py
notebooks/erc_721/: erc721_nb.py
scripts/: generate_models.py
specs/: admin.spec.json
sql/: snowflake_stream_state.sql
src/amp/: FlightSql_pb2.py  __init__.py  async_client.py  client.py  loaders.py  metrics.py  requirements-test.txt  util.py
src/amp/admin/: __init__.py  async_client.py  async_datasets.py  async_jobs.py  async_schema.py  client.py  datasets.py  deployment.py  errors.py  jobs.py  models.py  schema.py
src/amp/auth/: __init__.py  device_flow.py  models.py  service.py
src/amp/config/: __init__.py  connection_manager.py  label_manager.py
src/amp/dbt/: README.md  __init__.py  cli.py  compiler.py  config.py  dependencies.py  exceptions.py  models.py  monitor.py  project.py  state.py  tracker.py
src/amp/loaders/: NEW_LOADER_GUIDE.md  __init__.py  base.py  registry.py  types.py  utils.py
src/amp/loaders/implementations/: __init__.py  _postgres_helpers.py  clickhouse_loader.py  deltalake_loader.py  iceberg_loader.py  iceberg_types.py  kafka_loader.py  lmdb_loader.py  postgresql_loader.py  redis_loader.py  snowflake_loader.py
src/amp/registry/: __init__.py  async_client.py  async_datasets.py  client.py  datasets.py  errors.py  models.py  validators.py
src/amp/streaming/: __init__.py  checkpoint.py  idempotency.py  iterator.py  lmdb_state.py  parallel.py  reorg.py  resilience.py  state.py  types.py
src/amp/utils/: __init__.py  abi.py  manifest_inspector.py
tests/: __init__.py  conftest.py  delta_test_env.py  test_abi.py  test_util.py
tests/config/manifests/: anvil_rpc.json  base_firehose.json  base_rpc.json  base_rpc_failed_tx_filtering.json  eth_beacon.json  eth_firehose.json  eth_firehose_stream.json  eth_rpc.json  register_test_dataset__1_0_0.json
tests/e2e/: conftest.py  test_queries.py  test_streaming.py
tests/e2e/fixtures/: anvil.json  config.toml.template  provider.toml.template
tests/e2e/helpers/: config.py  dataset_manager.py  process_manager.py
tests/fixtures/: mock_clients.py  test_data.py
tests/integration/: test_checkpoint_resume.py  test_dbt.py  test_dbt_cli.py  test_deltalake_loader.py  test_iceberg_loader.py  test_kafka_loader.py  test_lmdb_loader.py  test_parallel_streaming.py  test_postgresql_loader.py  test_redis_loader.py  test_resilient_streaming.py  test_snowflake_loader.py
tests/integration/admin/: __init__.py  test_admin_client.py  test_datasets_client.py  test_jobs_client.py
tests/integration/loaders/: conftest.py  test_base_loader.py  test_base_streaming.py
tests/integration/loaders/backends/: test_clickhouse.py  test_deltalake.py  test_iceberg.py  test_kafka.py  test_lmdb.py  test_postgresql.py  test_redis.py  test_snowflake.py
tests/integration/registry/: __init__.py  test_datasets.py  test_search.py
tests/performance/: benchmarks.py  test_loader_performance.py
tests/unit/: test_async_client.py  test_auth_service.py  test_base.py  test_checkpoint.py  test_client.py  test_crash_recovery.py  test_idempotency.py  test_label_joining.py  test_label_manager.py  test_lmdb_state.py  test_metrics.py  test_parallel_streaming.py  test_registry_inspect.py  test_resilience.py  test_resume_optimization.py  test_stream_state.py  test_streaming_helpers.py  test_streaming_types.py
tests/unit/admin/: __init__.py  test_errors.py  test_models.py  test_schema.py
