[project]
name = "amp"
version = "0.1.0"
description = "Flight SQL client with comprehensive data loading capabilities"
readme = "README.md"
authors = [
    { name = "Ford", email = "ford@edgeandnode.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Core dependencies for all loaders
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "typer>=0.15.2",
    # Flight SQL support
    "adbc-driver-manager>=1.5.0",
    "adbc-driver-postgresql>=1.5.0",
    "protobuf>=4.21.0",
    # Ethereum/blockchain utilities
    "base58>=2.1.1",
    "eth-hash[pysha3]>=0.7.1",
    "eth-utils>=5.2.0",
    # Google Cloud support
    "google-cloud-bigquery>=3.30.0",
    "google-cloud-storage>=3.1.0",
    # Arro3 for enhanced PyArrow operations
    "arro3-core>=0.5.1",
    "arro3-compute>=0.5.1",
    # Admin API client support
    "httpx>=0.27.0",
    "pydantic>=2.0,<2.12",  # Constrained for PyIceberg compatibility
]

[dependency-groups]
dev = [
    "altair>=5.5.0",                # Data visualization for notebooks
    "marimo>=0.11.31",              # Interactive notebooks
    "ruff>=0.8.0",                  # Linting and formatting
    "datamodel-code-generator>=0.25.0",  # OpenAPI to Pydantic model generation
]

# Optional dependency groups for specific loaders
postgresql = [
    "psycopg2-binary>=2.9.0",
]

redis = [
    "redis>=4.5.0",
]

delta_lake = [
    "deltalake>=1.0.2",
]

iceberg = [
    "pyiceberg[sql-sqlite]>=0.10.0",
    "pydantic>=2.0,<2.12",  # PyIceberg 0.10.0 has issues with Pydantic 2.12+
]

snowflake = [
    "snowflake-connector-python>=4.0.0",
    "snowpipe-streaming>=1.0.0",  # Snowpipe Streaming API
]

lmdb = [
    "lmdb>=1.4.0",
]

clickhouse = [
    "clickhouse-connect>=0.8.0",
]

metrics = [
    "prometheus-client>=0.20.0",
]

all_loaders = [
    "psycopg2-binary>=2.9.0",       # PostgreSQL
    "redis>=4.5.0",                 # Redis
    "deltalake>=1.0.2",             # Delta Lake (consistent version)
    "pyiceberg[sql-sqlite]>=0.10.0", # Apache Iceberg
    "pydantic>=2.0,<2.12",          # PyIceberg 0.10.0 compatibility
    "snowflake-connector-python>=4.0.0",  # Snowflake
    "snowpipe-streaming>=1.0.0",        # Snowpipe Streaming API
    "lmdb>=1.4.0",                  # LMDB
    "clickhouse-connect>=0.8.0",    # ClickHouse
    "prometheus-client>=0.20.0",    # Metrics
]

test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0", # Parallel test execution
    "pytest-benchmark>=4.0.0", # Performance benchmarking
    "testcontainers>=4.0.0", # Database containers for integration tests
    "docker>=6.0.0", # Required by testcontainers
    "psutil>=5.9.0", # Memory usage monitoring
    "respx>=0.21.0", # HTTP mocking for Admin API tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    # Ignore testcontainers deprecation warnings from the library itself
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers",
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning",
]

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require databases)",
    "performance: Performance and benchmark tests",
    "slow: Slow tests (> 30 seconds)",
    "postgresql: Tests requiring PostgreSQL",
    "redis: Tests requiring Redis",
    "delta_lake: Tests requiring Delta Lake",
    "iceberg: Tests requiring Apache Iceberg",
    "snowflake: Tests requiring Snowflake",
    "clickhouse: Tests requiring ClickHouse",
    "cloud: Tests requiring cloud storage access",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "notebooks/",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
]
exclude = [
    "src/amp/FlightSql_pb2.py",     # Generated protobuf file
    "src/amp/registry/models.py",   # Generated from OpenAPI spec
    "*notebook*"
]

[tool.ruff.lint.per-file-ignores]
"*_nb.py" = ["B018"]                    # Notebook files
"tests/*" = ["B018", "E712"]            # Test files

[tool.ruff.format]
quote-style = "single"
exclude = [
    "notebooks/**",
    "**/*.ipynb",
]

[tool.coverage.run]
source = ["src/amp"]
omit = [
    "src/amp/FlightSql_pb2.py",
    "tests/*",
    "notebooks/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
